--- a/src/styles/elections-list.css
+++ b/src/styles/elections-list.css
@@ -1,31 +1,35 @@
 #elections-list-header {
-    text-align: center;
+  text-align: center;
 }
 
-.elections-list { 
-    text-align: center;
+.elections-list {
+  text-align: center;
 }
 
 .election-link {
-    /* border: 1px solid #828282; */
-    border: 2px solid #848484;
-    text-align: left;
-    padding: 1em;
-    /* width: 50%; */
-    background-color: #fff;
-    border-radius: .25em;
-    margin-top: 2em;
+  /* border: 1px solid #828282; */
+  border: 2px solid #848484;
+  text-align: left;
+  padding: 1em;
+  /* width: 50%; */
+  background-color: #fff;
+  border-radius: 0.25em;
+  margin-top: 2em;
 }
 
 .election-link:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .election-link:hover p {
-    color: #0056b3;
-    text-decoration: underline;
+  color: #0056b3;
+  text-decoration: underline;
 }
 
 .election-name {
-    margin: 0;
+  margin: 0;
+}
+
+.AsAuditor {
+  float: right;
 }
