--- a/src/styles/election-vote.css
+++ b/src/styles/election-vote.css
@@ -114,6 +114,23 @@ input[type=radio]:checked + label {
     font-weight: 300;
     padding-bottom: 1em;
 }
+
+.submit-vote {
+  margin-top: 1em;
+}
+
+#election-name {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.spoil-btn {
+  margin-top: 2em;
+}
+
+.modal-body {
+  text-align: center;
+}
 /* .form label{
 	position: relative;
 	color: #fff;
